--- a/main.html
+++ b/main.html
@@ -7,6 +7,13 @@
 
   <body>
     <!-- write the body here -->
+	  <form id="myForm">
+		  <label for="age">Age:</label>
+		  <input type="number" id="age">
+		  <label for="name">Name:</label>
+		  <input type="text" id="name">
+		  <button id="btn" type="submit">Submit</button>
+	  </form>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
